# Resumer-v2

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b377690cd861_init.py  b3d348f86f00_add_extracurriculars_and_subtitle.py  c1a4e9f20d83_add_thumb_storage_key.py  d2b5f1a9e347_add_content_split_to_generations.py
backend/src/: main.py
backend/src/api/: generation.py  profile.py  system.py
backend/src/core/: auth.py  config.py  database.py  executor.py  notify.py  storage.py
backend/src/models/: generation.py  profile.py  user.py
backend/src/pipeline/: __init__.py  graph.py  job_runner.py  nodes.py  state.py
backend/src/schemas/: generation.py  pipeline.py  profile.py  template.py
backend/src/template_registry/: __init__.py  routes.py  service.py
backend/templates/clean-modern/: manifest.json  style.css  template.jinja2
backend/templates/compact/: manifest.json  style.css  template.jinja2
backend/templates/personal-classic/: manifest.json  style.css  template.jinja2
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: actions.ts  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/: Footer.tsx  Header.tsx  LoginModal.tsx  Nav.tsx  Navigation.tsx  providers.tsx
frontend/lib/: api.ts  auth.ts  jwt.ts
(+22 files in other folders)
