[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.43.34",
    "fastapi>=0.138.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.10",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.6",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "weasyprint>=69.0",
    "pypdfium2>=4",
]
